--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,9 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
+@import "hocus-pocus/scss/colors";
+
+$font-family-base: sans-serif;
+
+@import "hocus-pocus/hocus-pocus";
