Set up font settings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Shelly Cloud</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro">
     <link rel="stylesheet" href="/css/main.css">
   </head>
 
   <body>
-    {{ content }}
+    <div class="container">
+      {{ content }}
+    </div>
   </body>
 </html>
