--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <div class="container">
+        <div class="grid grid-center">
+          <div class="grid-item">
+            <div class="logo">Shelly Cloud</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       {{ content }}
     </div>
