--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,6 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "hocus-pocus/scss/colors";
-
 $font-family-base: "Source Sans Pro", sans-serif;
 $font-size-base: 16;
 $font-weight-headings: 400;
@@ -20,7 +18,7 @@ h2 {
 }
 
 .logo {
-  @include img-replace('/img/logo.svg', 237px, 54px);
+  @include img-replace('/img/img-logo.svg', 237px, 54px);
 }
 
 .navbar {
@@ -28,4 +26,15 @@ h2 {
   background-position: top center, top left, top right;
   background-repeat: no-repeat;
   background-size: auto, 50% $navbar-height, 50% $navbar-height;
+}
+
+.thumbnail {
+  width: 100%;
+  margin-bottom: $spacing-unit;
+}
+
+.thumbnail-bordered {
+  margin-bottom: halve($spacing-unit);
+  border: 1px solid $color-silver;
+  padding: 5px;
 }
