--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,12 @@
       <div class="container">
         <div class="grid grid-center">
           <div class="grid-item">
-            <div class="logo">Shelly Cloud</div>
+            <div class="logo">
+              Shelly Cloud
+              <span class="slogan">
+                a product of <a href="http://ragnarson.com">Ragnarson</a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
