--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,5 +28,7 @@
     <div class="container">
       {{ content }}
     </div>
+
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
