Some rwd bcs it's easy to do with HP

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
           <div class="grid-item">
             <div class="logo">
               Shelly Cloud
-              <span class="slogan">
+              <span class="slogan mobile-hidden">
                 a product of <a href="http://ragnarson.com">Ragnarson</a>
               </span>
             </div>
